--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <form id="registrationForm">
+    <form id="registrationForm" action="processForm.php" method="post">
         <label for="regNumber">Registration Number:</label>
         <input type="text" id="regNumber" name="regNumber" required><br>
 
